Fix ignored files on sidecar

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ target
 
 .env
 .todos/
+
+# Sidecar worktree state files
+.sidecar/
+.sidecar-agent
+.sidecar-task
+.sidecar-pr
+.sidecar-start.sh
+.sidecar-base
+.td-root
