refactor: extract migration and entities into beam-migration and beam-entity packages
- Rename migration/ → beam-migration/ with updated package/lib/bin names
- Move beam-stream/src/entities/ → new beam-entity/ workspace crate
- Re-export beam_entity as entities in beam-stream for backward compat

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["beam-stream", "migration"]
+members = ["beam-stream", "beam-migration", "beam-entity"]
 resolver = "3"
 
 [workspace.dependencies]
