--- a/beam-stream/Cargo.toml
+++ b/beam-stream/Cargo.toml
@@ -8,6 +8,7 @@ default-run = "beam-stream"
 
 [dependencies]
 argon2 = { workspace = true }
+beam-entity = { path = "../beam-entity" }
 async-graphql = { version = "7.0.17", features = [
     "apollo_persisted_queries",
     "chrono",
@@ -58,5 +59,5 @@ xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 
 [dev-dependencies]
 futures = "0.3.31"
-migration = { path = "../migration" }
+beam-migration = { path = "../beam-migration" }
 mockall = "0.14.0"
