fix: pin http crate to >=1.4 to avoid broken 1.3.x publish
http v1.3.x contains a syntactically invalid struct definition
(pub struct impl HeaderName) that fails to compile. Add a workspace
dependency constraint of >=1.4, <2 to force Cargo to resolve to
http 1.4.0 which compiles correctly with Rust 1.91.0.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = ["beam-auth", "beam-stream", "beam-migration", "beam-entity"]
 resolver = "3"
 
 [workspace.dependencies]
+# http 1.3.x has a corrupted publish that fails to compile; pin to >=1.4
+http = ">=1.4, <2"
 argon2 = { version = "0.5.3", features = ["std"] }
 async-trait = "0.1"
 bb8-redis = "0.26.0"
