--- a/beam-stream/Cargo.toml
+++ b/beam-stream/Cargo.toml
@@ -9,6 +9,7 @@ default-run = "beam-stream"
 [dependencies]
 beam-auth = { path = "../beam-auth", features = ["utils", "server"] }
 beam-entity = { path = "../beam-entity" }
+http = { workspace = true }
 async-graphql = { version = "7.0.17", features = [
     "apollo_persisted_queries",
     "chrono",
@@ -31,7 +32,6 @@ eyre = "0.6.12"
 ffmpeg-next = { workspace = true }
 fs2 = "0.4.3"
 hex = { version = "0.4.3", features = ["serde"] }
-http = "1"
 m3u8-rs = "6.0.0"
 num = { version = "0.4.3", features = ["serde"] }
 num_cpus = "1.17.0"
