chore: add GitHub Actions CI for Rust and TypeScript
- Add .github/workflows/rust.yml with fmt, clippy, check, and test+coverage
  jobs; installs FFmpeg dev libs and uses Swatinem/rust-cache for caching
- Add .github/workflows/typescript.yml with biome lint, tsc typecheck, and
  vitest test+coverage jobs; uses bun with dependency caching
- Add vitest.config.ts with jsdom environment, passWithNoTests, and v8
  coverage reporting (threshold enforcement commented out until 80% is met)
- Add src/gql.ts codegen stub with proper enums and interfaces so tsc
  passes without requiring a live backend for schema generation
- Add @vitest/coverage-v8, typecheck, and test:coverage scripts to package.json
- Add rustfmt, clippy, and llvm-tools-preview components to rust-toolchain.toml

--- a/beam-web/.gitignore
+++ b/beam-web/.gitignore
@@ -9,5 +9,7 @@ count.txt
 .tanstack
 .wrangler
 
-# GraphQL Codegen
-src/gql.ts
+# Coverage output
+coverage/
+
+# GraphQL Codegen (src/gql.ts is tracked as a stub; update via `bun run codegen:full`)
