feat: add centralized admin event log and real-time notifications
Implements the notification infrastructure for admin users to observe
administrative tasks (library scans) and receive warnings/errors.

- Add NotificationService trait with LocalNotificationService (broadcast
  channel + 1000-event circular buffer) and InMemoryNotificationService
  for zero-infrastructure testing
- Inject NotificationService into LibraryService; emit Info/Warning/Error
  events on scan start, scan complete, file processing failures, library
  create, and library delete
- Expose admin GraphQL query (adminEvents) for polling the event log and
  subscription (adminEventsWatch) for real-time streaming
- Add WebSocket endpoint at /v1/graphql/ws using graphql-transport-ws
  protocol to transport GraphQL subscriptions
- Refactor QueryRoot/MutationRoot/SubscriptionRoot to use MergedObject /
  MergedSubscription derive macros for composability
- Pin http < 1.3 to fix pre-existing compile error in http 1.3.x

All 17 tests pass (cargo test --workspace).

--- a/beam-stream/Cargo.toml
+++ b/beam-stream/Cargo.toml
@@ -21,6 +21,7 @@ async-graphql = { version = "7.0.17", features = [
     "uuid",
     "url",
 ] }
+async-stream = "0.3"
 async-trait = { workspace = true }
 base64 = "0.22.1"
 bb8-redis = { workspace = true }
@@ -32,6 +33,7 @@ dotenvy = "0.15.7"
 eyre = "0.6.12"
 ffmpeg-next = { workspace = true }
 fs2 = "0.4.3"
+futures-util = "0.3"
 hex = { version = "0.4.3", features = ["serde"] }
 http = "1"
 jsonwebtoken = { workspace = true }
