--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = ["beam-stream", "beam-migration", "beam-entity"]
 resolver = "3"
 
 [workspace.dependencies]
+# Pin http to <1.3 as http 1.3.x has compile errors (conflicting TryFrom impls)
+http = ">=1.0, <1.3"
 argon2 = { version = "0.5.3", features = ["std"] }
 async-trait = "0.1"
 bb8-redis = "0.26.0"
@@ -18,6 +20,7 @@ salvo = { version = "0.89.1", features = [
     "cors",
     "serve-static",
     "affix-state",
+    "websocket",
 ] }
 sea-orm = { version = "1.1", features = [
     "sqlx-postgres",
