feat: centralize Biome linting via bun workspaces
- Add root package.json with bun workspaces for beam-docs and beam-web
- Move biome.json to root, enable VCS git integration, add file overrides
- Remove per-package bun.lock files in favour of a single root lockfile
- Remove @biomejs/biome from beam-web devDependencies (now from root)
- Add lint/format/check scripts to beam-docs
- Create .github/workflows/lint.yml with Biome check and TS typecheck jobs
- Fix all biome lint/format issues across beam-web source files
- Remove stale old-api/beam-auth/biome.jsonc (incompatible biome 1.x schema)

--- a/beam-docs/package.json
+++ b/beam-docs/package.json
@@ -9,7 +9,10 @@
     "preview": "wrangler pages dev ./dist",
     "astro": "astro",
     "deploy": "astro build && wrangler pages deploy",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "format": "biome format .",
+    "lint": "biome lint .",
+    "check": "biome check ."
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
