feat: make beam-auth a standalone binary service
beam-auth is now a first-class deployable service alongside beam-stream.
Auth HTTP endpoints are removed from beam-stream's router and served
exclusively by the new beam-auth process.

- Add src/main.rs, config.rs, logging.rs to boot a Salvo server with
  full DB + Redis + JWT wiring (mirrors beam-stream startup sequence)
- Add Containerfile (4-stage, no FFmpeg) targeting port 8001
- Add .env.example and rewrite README.md for standalone usage
- Update Cargo.toml: [[bin]], default = ["server"], non-optional deps
  (color-eyre, confique, dotenvy, eyre, http, tokio, tracing-subscriber)
- Expose config/logging modules unconditionally from lib.rs
- Add auth service to compose.beam.yaml with healthcheck on /v1/health
- Remove auth route mount from beam-stream/src/routes/mod.rs

--- a/beam-auth/Cargo.toml
+++ b/beam-auth/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 edition = "2024"
 license = "AGPL-3.0-only"
 publish = false
+default-run = "beam-auth"
+
+[[bin]]
+name = "beam-auth"
+path = "src/main.rs"
+required-features = ["server"]
 
 [features]
-default = []
+default = ["server"]
 utils = [
     "dep:argon2",
     "dep:async-trait",
@@ -30,6 +36,16 @@ server = [
 ]
 
 [dependencies]
+# Non-optional: always compiled (needed by config.rs, logging.rs, and main.rs)
+color-eyre = "0.6.5"
+confique = { workspace = true }
+dotenvy = "0.15.7"
+eyre = "0.6.12"
+http = { workspace = true }
+tokio = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
+
+# Optional: feature-gated
 argon2 = { workspace = true, optional = true }
 async-trait = { workspace = true, optional = true }
 base64 = { version = "0.22.1", optional = true }
