refactor: decouple beam-stream from beam-auth server feature
Remove the server feature flag dependency so beam-stream only uses
beam-auth primitives (traits, impls) without pulling in HTTP handlers.
Drop the stale auth route mount, dead _auth_service variable, and
session_store from AppServices since it is an auth implementation detail
fully encapsulated within LocalAuthService.

--- a/beam-stream/Cargo.toml
+++ b/beam-stream/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 default-run = "beam-stream"
 
 [dependencies]
-beam-auth = { path = "../beam-auth", features = ["utils", "server"] }
+beam-auth = { path = "../beam-auth", features = ["utils"] }
 beam-entity = { path = "../beam-entity" }
 http = { workspace = true }
 async-graphql = { version = "7.0.17", features = [
