ci: cache apt packages and bun dependencies to speed up CI
Replace manual apt-get install of FFmpeg dev libs with
awalsh128/cache-apt-pkgs-action in all three Rust CI jobs (clippy, check,
test) to avoid re-downloading on every run. Also add bun dependency caching
to lint.yml biome and typecheck jobs to match typescript.yml.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,18 +26,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install FFmpeg development libraries
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libavcodec-dev \
-            libavformat-dev \
-            libavutil-dev \
-            libavfilter-dev \
-            libavdevice-dev \
-            libswscale-dev \
-            libswresample-dev \
-            clang
+      - name: Cache FFmpeg development libraries
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libavcodec-dev libavformat-dev libavutil-dev libavfilter-dev libavdevice-dev libswscale-dev libswresample-dev clang
+          version: 1.0
 
       - name: Cache Cargo dependencies
         uses: Swatinem/rust-cache@v2
@@ -51,18 +44,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install FFmpeg development libraries
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libavcodec-dev \
-            libavformat-dev \
-            libavutil-dev \
-            libavfilter-dev \
-            libavdevice-dev \
-            libswscale-dev \
-            libswresample-dev \
-            clang
+      - name: Cache FFmpeg development libraries
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libavcodec-dev libavformat-dev libavutil-dev libavfilter-dev libavdevice-dev libswscale-dev libswresample-dev clang
+          version: 1.0
 
       - name: Cache Cargo dependencies
         uses: Swatinem/rust-cache@v2
@@ -76,18 +62,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install FFmpeg development libraries
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libavcodec-dev \
-            libavformat-dev \
-            libavutil-dev \
-            libavfilter-dev \
-            libavdevice-dev \
-            libswscale-dev \
-            libswresample-dev \
-            clang
+      - name: Cache FFmpeg development libraries
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libavcodec-dev libavformat-dev libavutil-dev libavfilter-dev libavdevice-dev libswscale-dev libswresample-dev clang
+          version: 1.0
 
       - name: Cache Cargo dependencies
         uses: Swatinem/rust-cache@v2
