--- a/beam-web/package.json
+++ b/beam-web/package.json
@@ -14,7 +14,10 @@
     "typecheck": "tsc --noEmit",
     "format": "biome format .",
     "lint": "biome lint .",
-    "check": "biome check ."
+    "check": "biome check .",
+    "lint:fix": "biome lint --write .",
+    "format:fix": "biome format --write .",
+    "check:fix": "biome check --write ."
   },
   "dependencies": {
     "@apollo/client": "^4.0.7",
