--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,19 +2,29 @@ name: Lint
 
 on:
   push:
-    branches: [master, main]
+    branches: [master]
     paths:
-      - "beam-web/**"
-      - "beam-docs/**"
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+      - "**/*.mjs"
+      - "**/*.cjs"
+      - "**/*.astro"
       - "biome.json"
       - "package.json"
+      - "**/package.json"
       - "bun.lock"
   pull_request:
     paths:
-      - "beam-web/**"
-      - "beam-docs/**"
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+      - "**/*.mjs"
+      - "**/*.cjs"
+      - "**/*.astro"
       - "biome.json"
       - "package.json"
+      - "**/package.json"
       - "bun.lock"
 
 jobs:
@@ -28,25 +38,16 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
       - name: Biome check
         run: bun run check
-
-  typecheck:
-    name: TypeScript Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
-
-      - name: Typecheck beam-web
-        working-directory: beam-web
-        run: bun run build
