Simplify TypeScript CI by adding root workspace scripts
Add build, typecheck, and test:coverage scripts to root package.json using
bun --filter to fan out across workspaces, allowing the CI workflow to drop
the setup/matrix/conditional-shell complexity in favour of flat jobs.

Add typecheck script (astro check) and @astrojs/check devDependency to
beam-docs for consistency with beam-web.

--- a/beam-docs/package.json
+++ b/beam-docs/package.json
@@ -15,7 +15,8 @@
     "check": "biome check .",
     "lint:fix": "biome lint --write .",
     "format:fix": "biome format --write .",
-    "check:fix": "biome check --write ."
+    "check:fix": "biome check --write .",
+    "typecheck": "astro check"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
@@ -24,6 +25,7 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.6",
     "wrangler": "^4.45.0"
   }
 }
