--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -7,25 +7,9 @@ on:
     branches: [master]
 
 jobs:
-  setup:
-    name: Discover Workspaces
-    runs-on: ubuntu-latest
-    outputs:
-      workspaces: ${{ steps.workspaces.outputs.list }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - id: workspaces
-        run: echo "list=$(jq -c '.workspaces' package.json)" >> $GITHUB_OUTPUT
-
   build:
-    name: Build (${{ matrix.workspace }})
-    needs: setup
+    name: Build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        workspace: ${{ fromJson(needs.setup.outputs.workspaces) }}
     steps:
       - uses: actions/checkout@v4
 
@@ -45,17 +29,11 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Build
-        working-directory: ${{ matrix.workspace }}
         run: bun run build
 
   typecheck:
-    name: Type Check (${{ matrix.workspace }})
-    needs: setup
+    name: Type Check
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        workspace: ${{ fromJson(needs.setup.outputs.workspaces) }}
     steps:
       - uses: actions/checkout@v4
 
@@ -75,22 +53,11 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Type check
-        working-directory: ${{ matrix.workspace }}
-        run: |
-          if jq -e '.scripts.typecheck' package.json > /dev/null 2>&1; then
-            bun run typecheck
-          else
-            echo "No typecheck script in ${{ matrix.workspace }}, skipping"
-          fi
+        run: bun run typecheck
 
   test:
-    name: Tests (${{ matrix.workspace }})
-    needs: setup
+    name: Tests
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        workspace: ${{ fromJson(needs.setup.outputs.workspaces) }}
     steps:
       - uses: actions/checkout@v4
 
@@ -110,18 +77,12 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run tests with coverage
-        working-directory: ${{ matrix.workspace }}
-        run: |
-          if jq -e '.scripts["test:coverage"]' package.json > /dev/null 2>&1; then
-            bun run test:coverage
-          else
-            echo "No test:coverage script in ${{ matrix.workspace }}, skipping"
-          fi
+        run: bun run test:coverage
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-${{ matrix.workspace }}
-          path: ${{ matrix.workspace }}/coverage
+          name: coverage
+          path: "**/coverage"
           if-no-files-found: ignore
           retention-days: 7
