--- a/beam-stream/Cargo.toml
+++ b/beam-stream/Cargo.toml
@@ -59,3 +59,6 @@ xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 futures = "0.3.31"
 beam-migration = { path = "../beam-migration" }
 mockall = "0.14.0"
+
+[features]
+test-utils = []
