Apply consistent CI best practices to TypeScript and Lint workflows
- Add concurrency groups to lint.yml and typescript.yml to cancel
  superseded runs, matching the pattern already in rust.yml
- Fix lint.yml pull_request trigger missing branches: [master] filter,
  which caused it to run on PRs targeting any branch
- Add path filters to typescript.yml so it only runs on TS/JS-relevant
  changes, consistent with lint.yml; also includes **/tsconfig*.json
  since tsconfig changes affect type checking and build output

--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -3,8 +3,34 @@ name: TypeScript CI
 on:
   push:
     branches: [master]
+    paths:
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+      - "**/*.mjs"
+      - "**/*.cjs"
+      - "**/*.astro"
+      - "**/tsconfig*.json"
+      - "package.json"
+      - "**/package.json"
+      - "bun.lock"
   pull_request:
     branches: [master]
+    paths:
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+      - "**/*.mjs"
+      - "**/*.cjs"
+      - "**/*.astro"
+      - "**/tsconfig*.json"
+      - "package.json"
+      - "**/package.json"
+      - "bun.lock"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
