--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,7 @@ on:
       - "**/package.json"
       - "bun.lock"
   pull_request:
+    branches: [master]
     paths:
       - "**/*.ts"
       - "**/*.tsx"
@@ -26,6 +27,10 @@ on:
       - "package.json"
       - "**/package.json"
       - "bun.lock"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   biome:
