--- a/compose.dependencies.yaml
+++ b/compose.dependencies.yaml
@@ -30,6 +30,39 @@ services:
       retries: 5
       start_period: 10s
 
+  traefik:
+    image: docker.io/traefik:v3
+    command:
+      # Dashboard (bound to loopback only)
+      - --api.dashboard=true
+      - --api.insecure=true
+      # Docker provider: watch for container events to auto-reconnect when beam services are rebuilt
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --providers.docker.network=beam_proxy
+      # HTTP entrypoint: redirect all traffic to HTTPS
+      - --entrypoints.web.address=:80
+      - --entrypoints.web.http.redirections.entrypoint.to=websecure
+      - --entrypoints.web.http.redirections.entrypoint.scheme=https
+      # HTTPS entrypoint with HTTP/3 (QUIC over UDP)
+      - --entrypoints.websecure.address=:443
+      - --entrypoints.websecure.http3=true
+    ports:
+      - "${TRAEFIK_HTTP_PORT:-80}:80"
+      - "${TRAEFIK_HTTPS_PORT:-443}:443"
+      - "${TRAEFIK_HTTPS_PORT:-443}:443/udp"
+      # Dashboard only on loopback
+      - "127.0.0.1:${TRAEFIK_DASHBOARD_PORT:-8888}:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - beam_proxy
+    restart: unless-stopped
+
 volumes:
   postgres:
   valkey_data:
+
+networks:
+  beam_proxy:
+    name: beam_proxy
