Add in-memory auth fakes and subcutaneous JWT auth tests for beam-stream
- Add `test-utils` feature to beam-auth, exposing `InMemorySessionStore`
  and `InMemoryUserRepository` for zero-infrastructure test builds
- Add these in-memory implementations behind `#[cfg(any(test, feature = "test-utils"))]`
- Wire beam-stream dev-deps to use `beam-auth` with `test-utils` feature
- Add 5 subcutaneous GraphQL auth tests covering AuthGuard, AdminGuard,
  token revocation, and invalid JWT rejection — all run without Redis or Postgres

--- a/beam-auth/Cargo.toml
+++ b/beam-auth/Cargo.toml
@@ -34,6 +34,7 @@ server = [
     "utils",
     "dep:salvo",
 ]
+test-utils = ["utils"]
 
 [dependencies]
 # Non-optional: always compiled (needed by config.rs, logging.rs, and main.rs)
