ci: fix cache invalidation in GH Actions workflows
Rust: add shared-key per job (clippy/test) so each maintains its own
stable cache bucket. cargo clippy and cargo test produce incompatible
artifacts, causing them to invalidate each other's cache when sharing
the same key.

Bun: extend cache to include node_modules and skip bun install on
exact cache hits, eliminating redundant installs across parallel jobs.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -117,6 +117,8 @@ jobs:
 
       - name: Cache Cargo dependencies
         uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: clippy
 
       - name: Run Clippy
         run: cargo clippy --workspace --all-targets -- -D warnings
@@ -156,6 +158,8 @@ jobs:
 
       - name: Cache Cargo dependencies
         uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: test
 
       - name: Run tests
         run: cargo test --workspace
