fix: make all container images build successfully
- beam-auth/Containerfile: scope cargo-chef cook to --bin beam-auth to
  avoid pulling FFmpeg build deps from beam-stream
- beam-stream/Containerfile: add missing cargo chef cook step; add
  protobuf-compiler for beam-index proto compilation; scope cook to
  --bin beam-stream
- beam-web/Containerfile: fix bun workspace install (root bun.lock,
  include beam-docs); add Rust+FFmpeg stages to generate schema.graphql
  at build time instead of requiring it pre-committed
- beam-stream/src/bin/export_schema.rs: remove infrastructure dependency
  (DB, Redis) — generate SDL from type definitions alone
- beam-web/codegen.ts: add DateTime and Decimal scalar type mappings
- beam-web/src/routes/*: fix GraphQL queries to use flat root fields
  matching the MergedObject schema (remove library/admin/media namespace
  wrappers); update TypeScript data access patterns accordingly

--- a/beam-auth/Containerfile
+++ b/beam-auth/Containerfile
@@ -27,7 +27,7 @@ RUN apt-get update && \
 
 # Cook dependencies first (cached layer)
 COPY --from=planner /app/recipe.json recipe.json
-RUN cargo chef cook --release --recipe-path recipe.json
+RUN cargo chef cook --release --recipe-path recipe.json --bin beam-auth
 
 # Build the application
 COPY . .
